Actualizacion final, spring, diseño de java fx y testeo terminado #3 #2 #1